# ERAV4-ass8

./: README.md  config.py  dataset.py  lit_datamodule.py  lit_module.py  lit_train.py  lr_finder_utils.py  main.py  preprocessing_cifar100_dataset.py  pyproject.toml  text_logging_callback.py  utils.py
logs/experiment1/: metrics.json  model_info.txt
logs/experiment1/lightning_logs/experiment1/version_0/: events.out.tfevents.1760138136.MAC-QNYQPC2R2T  events.out.tfevents.1760139246.MAC-QNYQPC2R2T  hparams.yaml
