[project]
name = "train-cnn-cifar100"
version = "0.1.0"
description = "Train CNN model on Cifar100 on AWS with Docker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
