[project]
name = "train-cnn-cifar100"
version = "0.1.0"
description = "Train CNN model on Cifar100 on AWS with Docker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentationsx>=2.0.12",
    "ipykernel>=6.30.1",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "rich>=14.2.0",
    "tensorboardx>=2.6.4",
    "torch>=2.8.0",
    "torch-lr-finder>=0.2.2",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
]
